[gd_scene load_steps=39 format=3 uid="uid://dmdtse0r0jamm"]

[ext_resource type="Script" uid="uid://dgq77y7vb1lah" path="res://player.gd" id="1_a8ls1"]
[ext_resource type="Texture2D" uid="uid://wi6e3alnmqh0" path="res://sprites/main.png" id="2_qfm1y"]
[ext_resource type="Script" uid="uid://c5x6r3mgp6yf7" path="res://state_machine_handler.gd" id="3_fulsm"]
[ext_resource type="Script" uid="uid://bt2gfnnkvw2ec" path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" id="4_4r5pv"]
[ext_resource type="Script" uid="uid://cgcw4uj3fme3a" path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" id="5_60mlk"]
[ext_resource type="Script" uid="uid://bky7ul11nw1di" path="res://addons/imjp94.yafsm/src/states/State.gd" id="6_i4ail"]
[ext_resource type="Script" uid="uid://lktmiahi8nk5" path="res://addons/imjp94.yafsm/src/conditions/BooleanCondition.gd" id="7_a38lo"]
[ext_resource type="Script" uid="uid://6tfu5odia6si" path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" id="8_4ni07"]
[ext_resource type="Script" uid="uid://c214krfrcv5go" path="res://behavior_state/player/air.gd" id="9_l71n6"]
[ext_resource type="Script" uid="uid://ususr26pgf2u" path="res://behavior_state/player/ground.gd" id="10_ke2ow"]
[ext_resource type="Script" uid="uid://xwooryy4y5og" path="res://behavior_state.gd" id="11_ujl30"]
[ext_resource type="Script" uid="uid://vkr7jdskxn60" path="res://behavior_state/player/slippery.gd" id="12_31cv2"]
[ext_resource type="Script" uid="uid://ckhvctyix6juc" path="res://crawl.gd" id="13_pf23h"]
[ext_resource type="Script" uid="uid://dmmbpsi8ggh0o" path="res://jump.gd" id="14_dt7fs"]
[ext_resource type="Script" uid="uid://dj2pny76cdmi5" path="res://collision_handler.gd" id="15_wqfne"]
[ext_resource type="Shape2D" uid="uid://clf4j6ia4qkob" path="res://collision_shapes/detector_area.tres" id="16_wnwbv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_f3sb7"]
bounce = 1.0
absorbent = true

[sub_resource type="CircleShape2D" id="CircleShape2D_pkg7o"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_036b0"]
atlas = ExtResource("2_qfm1y")
region = Rect2(0, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f3sb7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_036b0")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Resource" id="Resource_cbp6q"]
script = ExtResource("6_i4ail")
name = "Air"
metadata/graph_offset = Vector2(388, -2.5)

[sub_resource type="Resource" id="Resource_udxuc"]
script = ExtResource("6_i4ail")
name = "Entry"
metadata/graph_offset = Vector2(168, 157.5)

[sub_resource type="Resource" id="Resource_ikiii"]
script = ExtResource("6_i4ail")
name = "Ground"
metadata/graph_offset = Vector2(388, 377.5)

[sub_resource type="Resource" id="Resource_2u3nc"]
script = ExtResource("6_i4ail")
name = "SlipperyGround"
metadata/graph_offset = Vector2(770.5, -2.5)

[sub_resource type="Resource" id="Resource_il2jm"]
script = ExtResource("7_a38lo")
value = true
comparation = 0
name = "ground"

[sub_resource type="Resource" id="Resource_wjb0r"]
script = ExtResource("8_4ni07")
from = "Air"
to = "Ground"
conditions = {
"ground": SubResource("Resource_il2jm")
}
priority = 0

[sub_resource type="Resource" id="Resource_bo7i5"]
script = ExtResource("7_a38lo")
value = true
comparation = 0
name = "slippery"

[sub_resource type="Resource" id="Resource_4h6ng"]
script = ExtResource("8_4ni07")
from = "Air"
to = "SlipperyGround"
conditions = {
"slippery": SubResource("Resource_bo7i5")
}
priority = 0

[sub_resource type="Resource" id="Resource_bc84e"]
script = ExtResource("7_a38lo")
value = false
comparation = 0
name = "ground"

[sub_resource type="Resource" id="Resource_wukud"]
script = ExtResource("8_4ni07")
from = "Ground"
to = "Air"
conditions = {
"ground": SubResource("Resource_bc84e")
}
priority = 0

[sub_resource type="Resource" id="Resource_bh8nc"]
script = ExtResource("7_a38lo")
value = true
comparation = 0
name = "slippery"

[sub_resource type="Resource" id="Resource_jjr1n"]
script = ExtResource("8_4ni07")
from = "Ground"
to = "SlipperyGround"
conditions = {
"slippery": SubResource("Resource_bh8nc")
}
priority = 0

[sub_resource type="Resource" id="Resource_o3ebs"]
script = ExtResource("7_a38lo")
value = false
comparation = 0
name = "slippery"

[sub_resource type="Resource" id="Resource_k83mh"]
script = ExtResource("8_4ni07")
from = "SlipperyGround"
to = "Air"
conditions = {
"slippery": SubResource("Resource_o3ebs")
}
priority = 0

[sub_resource type="Resource" id="Resource_w44yn"]
script = ExtResource("7_a38lo")
value = false
comparation = 0
name = "slippery"

[sub_resource type="Resource" id="Resource_g1i3r"]
script = ExtResource("8_4ni07")
from = "SlipperyGround"
to = "Ground"
conditions = {
"slippery": SubResource("Resource_w44yn")
}
priority = 0

[sub_resource type="Resource" id="Resource_a8ls1"]
script = ExtResource("8_4ni07")
from = "Entry"
to = "Air"
conditions = {}
priority = 0

[sub_resource type="Resource" id="Resource_mc2jv"]
script = ExtResource("5_60mlk")
states = {
"Air": SubResource("Resource_cbp6q"),
"Entry": SubResource("Resource_udxuc"),
"Ground": SubResource("Resource_ikiii"),
"SlipperyGround": SubResource("Resource_2u3nc")
}
transitions = {
"Air": {
"Ground": SubResource("Resource_wjb0r"),
"SlipperyGround": SubResource("Resource_4h6ng")
},
"Entry": {
"Air": SubResource("Resource_a8ls1")
},
"Ground": {
"Air": SubResource("Resource_wukud"),
"SlipperyGround": SubResource("Resource_jjr1n")
},
"SlipperyGround": {
"Air": SubResource("Resource_k83mh"),
"Ground": SubResource("Resource_g1i3r")
}
}
name = ""

[node name="Player" type="RigidBody2D"]
texture_filter = 1
collision_mask = 6
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_f3sb7")
gravity_scale = 0.333
lock_rotation = true
continuous_cd = 2
max_contacts_reported = 2
script = ExtResource("1_a8ls1")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_pkg7o")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f3sb7")
animation = &"idle"
autoplay = "idle"
frame_progress = 1.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("_machine")]
script = ExtResource("3_fulsm")
_machine = NodePath("StateMachinePlayer")

[node name="StateMachinePlayer" type="Node" parent="StateMachine"]
script = ExtResource("4_4r5pv")
state_machine = SubResource("Resource_mc2jv")
metadata/_custom_type_script = "uid://bt2gfnnkvw2ec"

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("9_l71n6")

[node name="Ground" type="Node" parent="StateMachine"]
script = ExtResource("10_ke2ow")

[node name="Entry" type="Node" parent="StateMachine"]
script = ExtResource("11_ujl30")
metadata/_custom_type_script = "uid://xwooryy4y5og"

[node name="Exit" type="Node" parent="StateMachine"]
script = ExtResource("11_ujl30")
metadata/_custom_type_script = "uid://xwooryy4y5og"

[node name="SlipperyGround" type="Node" parent="StateMachine"]
script = ExtResource("12_31cv2")
metadata/_custom_type_script = "uid://xwooryy4y5og"

[node name="Actions" type="Node" parent="."]

[node name="Crawl" type="Node" parent="Actions" node_paths=PackedStringArray("_player_rb")]
script = ExtResource("13_pf23h")
_crawl_speed = 15.0
_player_rb = NodePath("../..")
action_active = true

[node name="Jump" type="Node" parent="Actions" node_paths=PackedStringArray("_player_rb")]
script = ExtResource("14_dt7fs")
_jump_force = 20.0
_player_rb = NodePath("../..")
action_active = true
metadata/_custom_type_script = "uid://btqms6rhikc4v"

[node name="CollisionHandler" type="Node" parent="."]
script = ExtResource("15_wqfne")

[node name="Detectors" type="Node2D" parent="."]

[node name="GroundDetector" type="Area2D" parent="Detectors"]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2
priority = 2

[node name="Collider" type="CollisionShape2D" parent="Detectors/GroundDetector"]
shape = ExtResource("16_wnwbv")

[node name="SlipDetector" type="Area2D" parent="Detectors"]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 4
priority = 2

[node name="Collider" type="CollisionShape2D" parent="Detectors/SlipDetector"]
shape = ExtResource("16_wnwbv")

[connection signal="internal_move_input_change" from="." to="Actions/Crawl" method="_on_move_input_change"]
[connection signal="internal_pull_input_change" from="." to="Actions/Jump" method="_on_input_service_pull_input_change"]
[connection signal="internal_pull_release" from="." to="Actions/Jump" method="_on_input_service_pull_release"]
[connection signal="entered" from="StateMachine/StateMachinePlayer" to="StateMachine" method="_on_state_machine_player_entered"]
[connection signal="exited" from="StateMachine/StateMachinePlayer" to="StateMachine" method="_on_state_machine_player_exited"]
[connection signal="transited" from="StateMachine/StateMachinePlayer" to="StateMachine" method="state_transition"]
[connection signal="airborne" from="StateMachine/Air" to="." method="on_unstick"]
[connection signal="airborne" from="StateMachine/Air" to="Actions/Crawl" method="set_inactive"]
[connection signal="airborne" from="StateMachine/Air" to="Actions/Jump" method="set_inactive"]
[connection signal="grounded" from="StateMachine/Ground" to="." method="on_stick"]
[connection signal="grounded" from="StateMachine/Ground" to="Actions/Crawl" method="set_active"]
[connection signal="grounded" from="StateMachine/Ground" to="Actions/Jump" method="set_active"]
[connection signal="slippery_grounded" from="StateMachine/SlipperyGround" to="." method="on_unstick"]
[connection signal="slippery_grounded" from="StateMachine/SlipperyGround" to="Actions/Crawl" method="set_active"]
[connection signal="set_state_machine_condition" from="CollisionHandler" to="StateMachine" method="set_property"]
[connection signal="body_entered" from="Detectors/GroundDetector" to="CollisionHandler" method="_on_ground_detector_body_entered"]
[connection signal="body_exited" from="Detectors/GroundDetector" to="CollisionHandler" method="_on_ground_detector_body_exited"]
[connection signal="body_entered" from="Detectors/SlipDetector" to="CollisionHandler" method="_on_slip_detector_body_entered"]
[connection signal="body_exited" from="Detectors/SlipDetector" to="CollisionHandler" method="_on_slip_detector_body_exited"]
